--- a/backup-scripts.cabal
+++ b/backup-scripts.cabal
@@ -15,13 +15,14 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
-executable backup-scripts
-  main-is:             Main.hs
+executable rm-dups
+  main-is:             RmDups.hs
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
 test-suite backup-scripts-specs
   type:                exitcode-stdio-1.0
   ghc-options:         -threaded -rtsopts
