--- a/backup-scripts.cabal
+++ b/backup-scripts.cabal
@@ -20,6 +20,12 @@ executable rm-dups
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8
+                     , attoparsec
+                     , text
+                     , shelly
+                     , system-filepath
+                     , system-fileio
+                     , optparse-applicative
   -- hs-source-dirs:      
   default-language:    Haskell2010
 
