--- a/backup-scripts.cabal
+++ b/backup-scripts.cabal
@@ -29,6 +29,16 @@ executable rm-dups
   -- hs-source-dirs:      
   default-language:    Haskell2010
 
+executable split-all
+  main-is:             SplitAll.hs
+  build-depends:       base >=4.7 && <4.8
+                     , text
+                     , shelly
+                     , system-filepath
+                     , system-fileio
+  -- hs-source-dirs:      
+  default-language:    Haskell2010
+
 test-suite backup-scripts-specs
   type:                exitcode-stdio-1.0
   ghc-options:         -threaded -rtsopts
