--- a/backup-scripts.cabal
+++ b/backup-scripts.cabal
@@ -39,6 +39,17 @@ executable split-all
   -- hs-source-dirs:      
   default-language:    Haskell2010
 
+executable join-all
+  main-is:             JoinAll.hs
+  build-depends:       base >=4.7 && <4.8
+                     , text
+                     , shelly
+                     , system-filepath
+                     , system-fileio
+                     , bytestring
+  -- hs-source-dirs:      
+  default-language:    Haskell2010
+
 test-suite backup-scripts-specs
   type:                exitcode-stdio-1.0
   ghc-options:         -threaded -rtsopts
